[project]
name = "langgraph_turorial"
version = "0.1.0"
description = "LangGraph Learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.21.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.6",
    "transformers>=5.12.1",
]
